; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_imagetag_cmdline.c_imagetag_cmdline2.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_imagetag_cmdline.c_imagetag_cmdline2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gengetopt_args_info = type { i32 }
%struct.imagetag_cmdline_params = type { i32, i32, i32, i32, i64 }

@EXIT_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @imagetag_cmdline2(i32 %0, i8** %1, %struct.gengetopt_args_info* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i8**, align 8
  %9 = alloca %struct.gengetopt_args_info*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.imagetag_cmdline_params, align 8
  store i32 %0, i32* %7, align 4
  store i8** %1, i8*** %8, align 8
  store %struct.gengetopt_args_info* %2, %struct.gengetopt_args_info** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %15 = load i32, i32* %10, align 4
  %16 = getelementptr inbounds %struct.imagetag_cmdline_params, %struct.imagetag_cmdline_params* %14, i32 0, i32 0
  store i32 %15, i32* %16, align 8
  %17 = load i32, i32* %11, align 4
  %18 = getelementptr inbounds %struct.imagetag_cmdline_params, %struct.imagetag_cmdline_params* %14, i32 0, i32 1
  store i32 %17, i32* %18, align 4
  %19 = load i32, i32* %12, align 4
  %20 = getelementptr inbounds %struct.imagetag_cmdline_params, %struct.imagetag_cmdline_params* %14, i32 0, i32 2
  store i32 %19, i32* %20, align 8
  %21 = getelementptr inbounds %struct.imagetag_cmdline_params, %struct.imagetag_cmdline_params* %14, i32 0, i32 4
  store i64 0, i64* %21, align 8
  %22 = getelementptr inbounds %struct.imagetag_cmdline_params, %struct.imagetag_cmdline_params* %14, i32 0, i32 3
  store i32 1, i32* %22, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i8**, i8*** %8, align 8
  %25 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %9, align 8
  %26 = call i32 @imagetag_cmdline_internal(i32 %23, i8** %24, %struct.gengetopt_args_info* %25, %struct.imagetag_cmdline_params* %14, i32 0)
  store i32 %26, i32* %13, align 4
  %27 = load i32, i32* %13, align 4
  %28 = load i32, i32* @EXIT_FAILURE, align 4
  %29 = icmp eq i32 %27, %28
  br i1 %29, label %30, label %35

30:                                               ; preds = %6
  %31 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %9, align 8
  %32 = call i32 @imagetag_cmdline_free(%struct.gengetopt_args_info* %31)
  %33 = load i32, i32* @EXIT_FAILURE, align 4
  %34 = call i32 @exit(i32 %33) #3
  unreachable

35:                                               ; preds = %6
  %36 = load i32, i32* %13, align 4
  ret i32 %36
}

declare dso_local i32 @imagetag_cmdline_internal(i32, i8**, %struct.gengetopt_args_info*, %struct.imagetag_cmdline_params*, i32) #1

declare dso_local i32 @imagetag_cmdline_free(%struct.gengetopt_args_info*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
